--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,6 +197,11 @@
         <item>Other</item>
     </string-array>
 
+    <string-array name="slc_result_dealing">
+        <item>Approved</item>
+        <item>Reject</item>
+    </string-array>
+
     <string name="google_maps_key">AIzaSyBtX8Zci5VlzaielTuX_0Y9t-8rhKL0An8</string>
 
 </resources>
